--- a/style.css
+++ b/style.css
@@ -11,12 +11,48 @@ body {
     margin-top: 1em;
 }
 
-.records-list td {
-    padding-right: 1em;
+button {
+    border-radius: 5px;
+    border: unset;
+    outline: unset;
+    padding: 5px;
 }
 
-.records-list td span:first-of-type {
-    font-weight: bold;
+button:hover,
+button:focus {
+    outline: 1px solid #000;
+}
+
+table.records-list {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+table.records-list th,
+table.records-list td {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+table.records-list tr.head {
+    color: #fff;
+    background-color: #00b16f;
+}
+
+table.records-list tr:nth-child(even):not(.head) {
+    background-color: #f2f2f2;
+}
+
+.records-list .remove-button {
+    color: #fff;
+    background-color: #800000;
+    display: block;
+    width: 100%;
+}
+
+.records-list .remove-button:hover,
+.records-list .remove-button:focus {
+    background-color: #4d0000;
 }
 
 .error {
